fixed the weird overflow issue from earlier

--- a/src/Footer/Footer.css
+++ b/src/Footer/Footer.css
@@ -6,7 +6,8 @@
 */
 
 footer {
-    margin-top: 2rem;
+    margin-top: 3rem;
+    font-size: 1.3rem;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
