--- a/src/ProjectTile/ProjectTile.css
+++ b/src/ProjectTile/ProjectTile.css
@@ -8,6 +8,12 @@
 .project-tile {
     /* height: 40rem; */
     width: 100%;
+    max-height: 0;
+    /* display: none; */
+    opacity: 0;
+    -webkit-transition: all 1s;
+    -o-transition: all 1s;
+    transition: all 1s;
     border: 1px solid var(--color-secondary);
     /* border-radius: 7px; */
     /* width: 20rem; */
@@ -59,6 +65,9 @@
 
 .project-tile--img {
     margin: .5rem 0;
+    position: relative;
+    /* left: 50%; */
+    /* transform: translateX(-50%); */
 }
 
 .project-tile--tech {
@@ -143,4 +152,14 @@
 .project-tile--tech__no-link {
     margin-top: 5px;
     color: red;
+}
+
+.project-tile--img, .project-tile--tech, .project-tile--tech__description, .project-tile--tech__icons, .project-tile--tech__link, .project-tile--tech__description {
+    max-height: 0;
+    opacity: 0;
+    overflow: hidden;
+    /* transform: scaleY(0); */
+    -webkit-transition: all 1s;
+    -o-transition: all 1s;
+    transition: all 1s;
 }
